refactor: remove Hawkular support
Hawkular has been abandoned for a long time upstream. It is now being removed from Apiman in order
to reduce the maintenance burden.

BREAKING CHANGE: We do not believe anyone is using Hawkular, but if you are, then it will break.

Fixes #1089